# hemmer-provider-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  dependabot-auto-merge.yml  release.yml
crates/analyzer/: Cargo.toml  README.md  build.rs
crates/analyzer/src/: analyzer.rs  client_detector.rs  confidence.rs  config_detector.rs  crate_pattern_detector.rs  error_detector.rs  git_cloner.rs  lib.rs  output.rs  workspace_detector.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs  sdk_metadata.rs
crates/generator/: Cargo.toml  README.md
crates/generator/src/: lib.rs  templates.rs
crates/generator/templates/: Cargo.toml.tera  README.md.tera  docs_getting_started.md.tera  docs_installation.md.tera  docs_service.md.tera  lib.rs.tera  main.rs.tera  provider.jcf.tera  provider.k.tera  release.yml.tera  resource.rs.tera  resources_mod.rs.tera  service_mod.rs.tera  unified_Cargo.toml.tera  unified_README.md.tera  unified_lib.rs.tera  unified_main.rs.tera  unified_provider.jcf.tera  unified_provider.k.tera  unified_resource.rs.tera  unified_service.rs.tera
crates/generator/tests/: generation_test.rs  recursive_nested_blocks_test.rs  unified_generation_test.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: aws.rs  lib.rs  operation_mapper.rs  rustdoc_loader.rs  type_mapper.rs
crates/parser/src/discovery/: converter.rs  mod.rs  parser.rs  types.rs
crates/parser/src/openapi/: converter.rs  mod.rs  parser.rs  types.rs
crates/parser/src/protobuf/: converter.rs  mod.rs  parser.rs
crates/parser/src/smithy/: converter.rs  mod.rs  parser.rs  types.rs
crates/parser/tests/: discovery_parser_test.rs  integration_test.rs  openapi_parser_test.rs  protobuf_parser_test.rs  smithy_parser_test.rs
crates/parser/tests/fixtures/: test_example.json
providers/: README.md  aws.sdk-metadata.yaml  azure.sdk-metadata.yaml  gcp.sdk-metadata.yaml  kubernetes.sdk-metadata.yaml
scripts/: README.md  install-hooks.sh  pre-commit
