[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/common",
    "crates/parser",
    "crates/generator",
]

[workspace.package]
version = "0.3.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hemmer-io/hemmer-provider-generator"
homepage = "https://github.com/hemmer-io/hemmer-provider-generator"
documentation = "https://docs.rs/hemmer-provider-generator"
authors = ["Hemmer Contributors"]
keywords = ["infrastructure", "cloud", "codegen", "terraform", "pulumi"]
categories = ["development-tools", "command-line-utilities"]
description = "Automatically generate Hemmer infrastructure providers from cloud SDK specifications"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Template Engine
tera = "1.20"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal
colored = "3.0"

# Testing
mockall = "0.13"
