[package]
name = "hemmer-provider-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hemmer-provider-generator"
path = "src/main.rs"

[dependencies]
hemmer-provider-generator-common = { path = "../common" }
hemmer-provider-generator-parser = { path = "../parser" }
hemmer-provider-generator-generator = { path = "../generator" }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
