[package]
name = "hemmer-provider-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
readme = "../../README.md"

[[bin]]
name = "hemmer-provider-generator"
path = "src/main.rs"

[dependencies]
hemmer-provider-generator-common = { version = "0.3.4", path = "../common" }
hemmer-provider-generator-parser = { version = "0.3.4", path = "../parser" }
hemmer-provider-generator-generator = { version = "0.3.4", path = "../generator" }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
