[package]
name = "hemmer-provider-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
readme = "../../README.md"

[[bin]]
name = "hemmer-provider-generator"
path = "src/main.rs"

[dependencies]
hemmer-provider-generator-common = { version = "0.4.1", path = "../common" }
hemmer-provider-generator-parser = { version = "0.4.1", path = "../parser" }
hemmer-provider-generator-generator = { version = "0.4.1", path = "../generator" }
hemmer-provider-generator-analyzer = { version = "0.4.1", path = "../analyzer" }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
