[package]
name = "hemmer-provider-generator-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hemmer-provider-generator-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = "3.0"
