[package]
name = "hemmer-provider-generator-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Code generation engine for Hemmer infrastructure providers"
readme = "README.md"

[dependencies]
hemmer-provider-generator-common = { version = "0.1.2", path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = "3.0"
