[package]
name = "hemmer-provider-generator-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hemmer-provider-generator-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rustdoc-types = "0.56"

[dev-dependencies]
mockall = { workspace = true }
