[package]
name = "hemmer-provider-generator-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Multi-format parsers for cloud SDK specifications (Smithy, OpenAPI, Discovery, Protobuf)"
readme = "README.md"

[dependencies]
hemmer-provider-generator-common = { version = "0.3.0", path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rustdoc-types = "0.56"
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.14"

[dev-dependencies]
mockall = { workspace = true }
